collision-detect-studies]

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,15 @@
       body {
         margin: 0;
       }
+      .status {
+        position:absolute;
+        right: 20px;
+        top: 20px;
+      }
     </style>
   </head>
   <body>
+    <span id="status" class="status"></span>
     <canvas></canvas>
   </body>
 </html>
