--- a/src/collision-detect.html
+++ b/src/collision-detect.html
@@ -10,38 +10,43 @@
       .status {
         position:absolute;
         right: 20px;
-        top: 50px;
+        top: 20px;
       }
       ul.menu {
          background: #555;
-         padding: 0px;
-         margin: 0px;
+         color: #FFF;
+         line-height: 50px;
          display: block;
          width: 100%;
       }
       .menu li{
-         background: #555;
-         color: #FFF;
-         cursor: pointer;
-         margin: 0px;
          padding: 10px;
          display: inline-block;
       }
-      .menu li:hover{
-         background-color: #777;
-      }
 
     </style>
-  <link rel="shortcut icon" href="favicon.ico"></head>
+    <script>
+        function show(sampleName){ 
+          let samples = document.querySelectorAll('canvas');
+          samples.forEach((sample)=>{
+              if(sample.getAttribute('class') === sampleName){
+                  sample.style.display = 'block';
+              }else{
+                  sample.style.display = 'none';
+              }
+          });
+        }
+    </script>
+  </head>
   <body>
     <ul class="menu">
-       <li class='sample1')>Collision Detection - Simple</li>
-       <li class='sample2')>Collision Detection - Particles</li>
+       <li onClick="javascript:show('sample1')">Collision Detection - Simple</li>
+       <li onClick="javascript:show('sample2')">Collision Detection - Particles</li>
     </ul> 
     <span id="status" class="status"></span>
     <canvas class="sample1" style="display:none">
     </canvas>
     <canvas class="sample2" style="display:none">
     </canvas>
-  <script type="text/javascript" src="./js/canvas.bundle.js"></script></body>
+  </body>
 </html>
